# ziniao-mcp

./: .env.example  .gitignore  .gitmodules  .mcp.json  CHANGELOG.md  CLAUDE.md  CLI_TEST_REPORT.md  LICENSE  Makefile  README.md  pyproject.toml  task.ps1  test_snap.html
.cursor-plugin/: plugin.json
.cursor/skills/engineering-lint-test/: SKILL.md
.cursor/skills/rakuten-ad-reports/: SKILL.md
.cursor/skills/rakuten-ad-reports/references/: SCRIPTS.md
.cursor/skills/rakuten-ad-reports/scripts/: aggregate_ad_exports.py  fetch_rpp_search_slices.ps1  merge_cpnadv_report_json.py  merge_rpp_search_json.py  run_ad_batch.ps1
.cursor/skills/rakuten-reviews/: SKILL.md
.cursor/skills/rakuten-reviews/references/: SCRIPTS.md
.cursor/skills/rakuten-reviews/scripts/: analyze_reviews_csv.py
.cursor/skills/strict-code-review/: SKILL.md
.github/workflows/: ci.yml  publish-pypi.yml
agents/: ziniao-operator.md
commands/: batch-screenshot.md  quick-check-stores.md
config/: config.yaml.example
docs/: CLAUDE.md  api-reference.md  architecture-packages.md  architecture.md  browser-cluster-cookie-auth-contracts.md  chrome-security-boundaries-automation.md  cli-agent-browser-parity.md  cli-json.md  cli-llm.md  dev-environment-windows.md  development.md  directory-conventions.md  iframe.md  install-uv-windows.md  installation.md  next-app-reverse-engineering.md  page-fetch-auth.md  page-fetch-xsrf.md  passive-input-automation.md  rakuten-presets-smoke-test.md  recording.md  rpa-flows.md  site-fetch-and-presets.md  site-repos-and-skills.md  site-ui-flows.md  stealth.md
examples/rpa/: flow-demo-login-and-extract.rpa-flow.json  minimal-rpa-flow.json  rakuten-rpp-search.rpa-flow.json
rules/: store-safety.mdc  ziniao-workflow.mdc
scripts/: CLAUDE.md  README.md  cli_test_all.py  e2e_cookie_vault_isolated_restore.py  rakuten_presets_smoke.py  repair_venv_pyvenv_cfg.ps1  run_tests.ps1  run_tests.sh  test_minimal_env.py  ziniao.cmd
skills/amazon-operations/: SKILL.md
skills/nodriver/: SKILL.md
skills/nodriver/references/: api-reference.md  examples.md
skills/rpa-flows/: SKILL.md
skills/store-management/: SKILL.md
skills/store-rpa-scripting/: SKILL.md  doc-template.md  examples.md  tools-reference.md
skills/store-rpa-scripting/assets/: doc-template.md
skills/store-rpa-scripting/references/: anti-automation.md  examples.md  lifecycle.md  tools-reference.md
skills/store-rpa-scripting/scripts/: minimal_store_cdp.py
skills/tiktok-operations/: SKILL.md
skills/ziniao-browser/: SKILL.md
skills/ziniao-cli/: SKILL.md
skills/ziniao-cli/assets/: config.example.yaml  env.example
skills/ziniao-cli/references/: commands.md  configuration.md  page-fetch-auth.md  site-fetch-and-presets.md
tests/: CLAUDE.md  conftest.py  integration_test.py  test_api_transport_unit.py  test_auth_restore_unit.py  test_chrome_input.py  test_cli_chrome_passive.py  test_cli_connection.py  test_cli_json_envelope.py  test_cli_store_flag.py  test_cli_version.py  test_client.py  test_cluster_unit.py  test_config_cmd.py  test_config_resolve.py  test_config_yaml.py  test_cookie_vault_unit.py  test_daemon_idle.py  test_flow_images.py  test_flow_run.py  test_media_contract.py  test_overlay_and_upload.py  test_page_fetch_transport_dispatch.py  test_prepare_request_transport_defaults.py  test_rakuten_item_presets.py  test_rakuten_reviews_csv.py  test_recorder_view.py  test_recording_context.py  test_recording_package.py  test_response_contract.py  test_response_encoding.py  test_secret_var.py  test_session.py  test_session_passive_store.py  test_site_plugin_repo_nonidentifier.py  test_site_policy.py  test_site_repo.py  test_sites_file_var.py  test_sites_fork.py  test_sites_pagination.py  (+5 more)
tests/flows/: conftest.py  test_dogfooding.py  test_emit_preset_unit.py  test_flow_cli_helpers.py  test_flow_policy.py  test_io_and_call_flow.py  test_runner_smoke.py
ziniao/: CLAUDE.md  __init__.py
ziniao_mcp/: CLAUDE.md  __init__.py  _interaction_helpers.py  api_transport.py  chrome_input.py  chrome_passive.py  cluster.py  config_yaml.py  cookie_vault.py  dotenv_loader.py  iframe.py  logging_setup.py  recording_context.py  server.py  session.py  site_policy.py
ziniao_mcp/cli/: __init__.py  __main__.py  connection.py  daemon.py  dispatch.py  help_epilog.py  output.py
ziniao_mcp/cli/actions/: __init__.py  find.py  getters.py  input.py  interaction.py  js.py  js_actions.py  media.py  navigation.py  state.py  upload.py
ziniao_mcp/cli/commands/: batch.py  check.py  chrome.py  chrome_input_cli.py  cluster_cmd.py  config_cmd.py  cookie_vault.py  find.py  flow_cmd.py  get.py  info.py  interact.py  lifecycle.py  mouse.py  navigate.py  network_cmd.py  recorder.py  scroll.py  session.py  site_cmd.py  skill_cmd.py  store.py  update_cmd.py
ziniao_mcp/core/: __init__.py  _eval.py  auth_restore.py  cdp_raw.py  check.py  find.py  get_info.py  network.py  scroll.py
ziniao_mcp/flows/: __init__.py  actions.py  mcp_invoke.py  policy.py  runner.py  schema.py
ziniao_mcp/recording/: __init__.py  buffer.py  capture_dom2.py  emit_nodriver.py  emit_playwright.py  emit_preset.py  ir.py  locator.py
ziniao_mcp/sites/: __init__.py  _base.py  discovery.py  flow_images.py  pagination.py  plugin_loader.py  rendering.py  repo.py  request.py  response_contract.py  save_media.py  validation.py  variables.py
ziniao_mcp/sites/rakuten/: __init__.py  afl-report-pending.json  cpa-reports-search.json  cpnadv-performance-retrieve-item.json  cpnadv-performance-retrieve.json  datatool-deal-csv.json  ref.md  reviews-csv.json  rmail-reports.json  rpp-exp-merchant.json  rpp-exp-report.json  rpp-search.json  shared-purchase-detail.json  tda-exp-report-item.json  tda-exp-report.json  tda-reports-search-item.json  tda-reports-search.json
ziniao_mcp/stealth/: __init__.py  human_behavior.py  js_patches.py
ziniao_mcp/tools/: __init__.py  _keys.py  chrome.py  debug.py  emulation.py  input.py  navigation.py  network.py  recorder.py  session_mgr.py  store.py
ziniao_webdriver/: CLAUDE.md  __init__.py  cdp_tabs.py  client.py  js_patches.py  lifecycle.py
