[project]
name = "ziniao"
version = "0.2.12"
description = "紫鸟与 Chrome 浏览器 AI 自动化 — 让 AI Agent 操控紫鸟店铺与本地 Chrome"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["ziniao", "mcp", "browser", "chrome", "cdp", "e-commerce", "cross-border"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
    "PyYAML>=6.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "nodriver>=0.48.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
ziniao = "ziniao_mcp.cli:main"
# 兼容旧文档与 MCP 配置；等价于 `ziniao serve` / `python -m ziniao_mcp`
ziniao-mcp = "ziniao_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ziniao_mcp", "ziniao_webdriver"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
]
